# ha-halo-collar

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  validate.yml
custom_components/halo_collar/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  controls.py  device_tracker.py  diagnostics.py  entity.py  event.py  helpers.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/halo_collar/translations/: en.json
docs/: ARCHITECTURE.md  BRANDS.md  RELEASING.md  WORKFLOW.md
scripts/: verify_release_artifacts.py
tests/: conftest.py  test_api.py  test_config_flow.py  test_controls.py  test_extractors.py  test_integration.py  test_tracker_compat.py
