[project]
name = "ha-halo-collar"
version = "0.2.0"
description = "Home Assistant custom integration for read-only Halo Collar telemetry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Halo Collar integration contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "aiohttp>=3.9",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
