[project]
name = "ha-halo-collar"
version = "0.3.0-beta.1"
description = "Home Assistant integration for Halo Collar telemetry and guarded fence controls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Halo Collar integration contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "aiohttp>=3.9",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
