[project]
name = "ha-halo-collar"
version = "0.3.0"
description = "Home Assistant integration for Halo Collar telemetry and guarded fence controls"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Halo Collar integration contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "aiohttp>=3.9",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-homeassistant-custom-component==0.13.346 ; python_full_version >= '3.14.2'",
  "ruff>=0.6",
]

[tool.setuptools.package-data]
"custom_components.halo_collar" = [
  "*.json",
  "brand/*.png",
  "translations/*.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
